# backplane

./: .env  .env.example  .gitignore  .versionrc  CHANGELOG.md  Dockerfile  LICENSE.md  Makefile  README.md  backplane-templates.json  backplane.py  backplane.sh  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.py  requirements.txt
backplane/: __init__.py  __main__.py  app.py  config.py  errors.py  main.py  service.py  utils.py
examples/n8n/: README.md  docker-compose.yml
examples/sonarqube/: README.md  docker-compose.yml
examples/wordpress/: README.md  docker-compose.yml
overrides/public/: .env  docker-compose.yml
overrides/traefik/config/: middlewares.yml  traefik.yml
overrides/traefik/data/letsencrypt/: acme.json
portainer/: docker-compose.yml
portainer/development/: docker-compose.yml
portainer/production/: docker-compose.yml
runner/: Dockerfile  Dockerfile.test  backplane-runner  backplane-ssh  docker-entrypoint.sh  post-receive
runner/config/: sshd_config
runner/development/: docker-compose.yml
tests/: test_backplane.py
traefik/: docker-compose.yml
traefik/development/: docker-compose.yml
traefik/development/config/: middlewares.yml
traefik/production/: docker-compose.yml
traefik/production/config/: middlewares.yml
