[tool.poetry]
name = "backplane"
version = "0.1.24"
description = "a dead-simple backplane for Dockerized applications"
authors = ["Fabian Peter <fabian@p3r.link>"]
license = "LICENSE.md"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
typer = {extras = ["all"], version = "^0.3.2"}
anyconfig = "^0.9.11"
docker = "^4.3.1"
python-dotenv = "^0.15.0"
PyYAML = "^5.3.1"
docker-compose = "^1.27.4"
packaging = "^20.4"

[tool.poetry.scripts]
backplane = "backplane.main:app"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.1.2"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
